# comp-to-assembly-from-scratch-hs

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  TODO.txt  cabal.project  clean.sh  comp-to-assembly-from-scratch-hs.cabal  run-asm.sh  run.sh
app/: Main.hs
data/: factorial.js
data/arm/: assert.s  assignment.s  factorial.s  hello.s  if-else.s  math.s  variable.s
data/js/: assert.js  assignment.js  factorial.js  if-else.js  math.js  variables.js
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/asm/: factorial.s
examples/js/: factorial.js
src/: Compile.hs  Emit.hs  Expr.hs  Parser.hs
test/: EmitSpec.hs  ParserSpec.hs  Spec.hs
test/data/: array.js  assignment.js  boolean.js  equal.js  if-else.js  math.js  not-equal.js  null.js  number.js  parameters.js  recursive.js  return.js  undefined.js  var.js  while.js
