cabal-version:      2.4
name:               comp-to-assembly-from-scratch-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Micah Cantor
maintainer:         micahcantor01@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    build-depends: base, text, megaparsec, mtl
    default-extensions: OverloadedStrings
    hs-source-dirs: src
    exposed-modules: Expr, Parser, Emit

executable comp-to-assembly-from-scratch-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, text, comp-to-assembly-from-scratch-hs
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite comp-to-assembly-from-scratch-hs-test
    main-is:          Spec.hs
    other-modules:    ParserSpec
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:    base, text, hspec, megaparsec, raw-strings-qq, comp-to-assembly-from-scratch-hs
